tests/snapshots/examples_fixtures/basics__lambda.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/basics/lambda.flx
== compile ==
failed (parse)
== diagnostics ==
--> compiler error[E076]: UNCLOSED DELIMITER

Expected a closing `}` to match this opening `{`.

  --> examples/basics/lambda.flx:54:19
   |
54 | fun myMap(arr, f) {
   |                   ^


--> compiler error[E031]: EXPECTED EXPRESSION

Expected expression, found ||.

  --> examples/basics/lambda.flx:56:10
   |
56 |         [||]
   |          ^^


--> compiler error[E031]: EXPECTED EXPRESSION

Expected expression, found else.

  --> examples/basics/lambda.flx:57:7
   |
57 |     } else {
   |       ^^^^

Found 3 errors.
== stdout ==
<not executed>
